Update CharList.js and index.css fixed issues with card images not showing up for some characters and also the scale of th images

--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,8 @@ div.nav {
 div.team-container {
   text-align: center;
 }
+
+img.card {
+  width: 100%;
+  height: 100%
+}
